Added new string values
Added string values for the title, clear, and equals buttons

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#00FFFFFF"
-        android:text="Calculate 99"
+        android:text="@string/Title"
         android:textColor="@color/md_theme_dark_background"
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -101,13 +101,13 @@
         android:layout_width="114dp"
         android:layout_height="48dp"
         android:layout_marginStart="120dp"
-        android:onClick="displayResult"
         android:autoText="false"
         android:foregroundTint="#C11717"
+        android:onClick="displayResult"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
         android:paddingRight="20dp"
-        android:text="="
+        android:text="@string/Equals"
         android:textAlignment="center"
         android:textScaleX="2"
         android:textSize="@dimen/signButton"
@@ -193,11 +193,11 @@
         android:layout_height="48dp"
         android:autoText="true"
         android:foregroundTint="#C11717"
+        android:onClick="clearAll"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
         android:paddingRight="20dp"
-        android:text="Clear"
-        android:onClick="clearAll"
+        android:text="@string/Clear"
         android:textAlignment="textEnd"
         android:textSize="@dimen/signButton"
         app:backgroundTint="@color/md_theme_dark_onSurfaceVariant"
