--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,8 +38,8 @@
         android:layout_width="292dp"
         android:layout_height="518dp"
         android:background="@color/md_theme_dark_surfaceVariant"
-        android:textColor="@color/md_theme_dark_outline"
         android:onClick="displayResult"
+        android:textColor="@color/md_theme_dark_outline"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="@+id/textView2"
@@ -79,14 +79,14 @@
         android:layout_height="59dp"
         android:autoText="false"
         android:foregroundTint="#C11717"
+        android:onClick="addOperator"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
         android:paddingRight="20dp"
         android:text="/"
-        android:transitionName="/"
         android:textAlignment="textEnd"
-        android:onClick="addOperator"
         android:textSize="@dimen/signButton"
+        android:transitionName="/"
         app:backgroundTint="@color/md_theme_dark_onSurfaceVariant"
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="@+id/textView5"
@@ -124,15 +124,15 @@
         android:layout_width="60dp"
         android:layout_height="59dp"
         android:autoText="false"
-        android:transitionName="-"
         android:foregroundTint="#C11717"
+        android:onClick="addOperator"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
         android:paddingRight="20dp"
         android:text="-"
         android:textAlignment="textEnd"
-        android:onClick="addOperator"
         android:textSize="@dimen/signButton"
+        android:transitionName="-"
         app:backgroundTint="@color/md_theme_dark_onSurfaceVariant"
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="@+id/textView5"
@@ -149,14 +149,14 @@
         android:layout_marginStart="116dp"
         android:autoText="false"
         android:foregroundTint="#C11717"
+        android:onClick="addOperator"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
         android:paddingRight="20dp"
         android:text="*"
-        android:transitionName="*"
         android:textAlignment="textEnd"
-        android:onClick="addOperator"
         android:textSize="@dimen/signButton"
+        android:transitionName="*"
         app:backgroundTint="@color/md_theme_dark_onSurfaceVariant"
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
         app:layout_constraintStart_toStartOf="@+id/textView5"
@@ -169,15 +169,15 @@
         android:layout_width="60dp"
         android:layout_height="59dp"
         android:autoText="false"
-        android:transitionName="+"
         android:foregroundTint="#C11717"
+        android:onClick="addOperator"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
         android:paddingRight="20dp"
         android:text="+"
-        android:onClick="addOperator"
         android:textAlignment="textEnd"
         android:textSize="@dimen/signButton"
+        android:transitionName="+"
         app:backgroundTint="@color/md_theme_dark_onSurfaceVariant"
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="@+id/textView5"
@@ -215,14 +215,14 @@
         android:layout_height="69dp"
         android:autoText="false"
         android:foregroundTint="#C11717"
+        android:onClick="addNum"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
         android:paddingRight="20dp"
         android:text="8"
-        android:onClick="addNum"
-        android:transitionName="8"
         android:textAlignment="textEnd"
         android:textSize="@dimen/numButton"
+        android:transitionName="8"
         app:backgroundTint="@color/md_theme_dark_onSurfaceVariant"
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="@+id/textView5"
@@ -238,14 +238,14 @@
         android:layout_height="69dp"
         android:autoText="false"
         android:foregroundTint="#C11717"
-        android:paddingLeft="0dp"
         android:onClick="addNum"
+        android:paddingLeft="0dp"
         android:paddingTop="0dp"
         android:paddingRight="20dp"
         android:text="5"
-        android:transitionName="5"
         android:textAlignment="textEnd"
         android:textSize="@dimen/numButton"
+        android:transitionName="5"
         app:backgroundTint="@color/md_theme_dark_onSurfaceVariant"
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="@+id/textView5"
@@ -261,14 +261,14 @@
         android:layout_height="69dp"
         android:autoText="false"
         android:foregroundTint="#C11717"
-        android:paddingLeft="0dp"
         android:onClick="addNum"
+        android:paddingLeft="0dp"
         android:paddingTop="0dp"
         android:paddingRight="20dp"
         android:text="4"
-        android:transitionName="4"
         android:textAlignment="textEnd"
         android:textSize="@dimen/numButton"
+        android:transitionName="4"
         app:backgroundTint="@color/md_theme_dark_onSurfaceVariant"
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="@+id/textView5"
@@ -284,14 +284,14 @@
         android:layout_height="69dp"
         android:autoText="false"
         android:foregroundTint="#C11717"
+        android:onClick="addNum"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
-        android:onClick="addNum"
         android:paddingRight="20dp"
         android:text="6"
-        android:transitionName="6"
         android:textAlignment="textEnd"
         android:textSize="@dimen/numButton"
+        android:transitionName="6"
         app:backgroundTint="@color/md_theme_dark_onSurfaceVariant"
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="@+id/textView5"
@@ -307,14 +307,14 @@
         android:layout_height="69dp"
         android:autoText="false"
         android:foregroundTint="#C11717"
+        android:onClick="addNum"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
         android:paddingRight="20dp"
-        android:onClick="addNum"
         android:text="7"
-        android:transitionName="7"
         android:textAlignment="textEnd"
         android:textSize="@dimen/numButton"
+        android:transitionName="7"
         app:backgroundTint="@color/md_theme_dark_onSurfaceVariant"
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="@+id/textView5"
@@ -330,14 +330,14 @@
         android:layout_height="69dp"
         android:autoText="false"
         android:foregroundTint="#C11717"
+        android:onClick="addNum"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
         android:paddingRight="20dp"
         android:text="9"
-        android:onClick="addNum"
-        android:transitionName="9"
         android:textAlignment="textEnd"
         android:textSize="@dimen/numButton"
+        android:transitionName="9"
         app:backgroundTint="@color/md_theme_dark_onSurfaceVariant"
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="@+id/textView3"
@@ -352,15 +352,15 @@
         android:layout_width="67dp"
         android:layout_height="69dp"
         android:autoText="false"
-        android:onClick="addNum"
         android:foregroundTint="#C11717"
-        android:transitionName="1"
+        android:onClick="addNum"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
         android:paddingRight="20dp"
         android:text="1"
         android:textAlignment="textEnd"
         android:textSize="@dimen/numButton"
+        android:transitionName="1"
         app:backgroundTint="@color/md_theme_dark_onSurfaceVariant"
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="@+id/textView3"
@@ -379,11 +379,11 @@
         android:onClick="addNum"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
-        android:transitionName="2"
         android:paddingRight="20dp"
         android:text="2"
         android:textAlignment="textEnd"
         android:textSize="@dimen/numButton"
+        android:transitionName="2"
         app:backgroundTint="@color/md_theme_dark_onSurfaceVariant"
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="@+id/textView3"
@@ -398,14 +398,14 @@
         android:layout_height="69dp"
         android:autoText="false"
         android:foregroundTint="#C11717"
-        android:paddingLeft="0dp"
         android:onClick="addNum"
+        android:paddingLeft="0dp"
         android:paddingTop="0dp"
         android:paddingRight="20dp"
         android:text="3"
-        android:transitionName="3"
         android:textAlignment="textEnd"
         android:textSize="@dimen/numButton"
+        android:transitionName="3"
         app:backgroundTint="@color/md_theme_dark_onSurfaceVariant"
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="@+id/textView5"
@@ -413,5 +413,25 @@
         app:layout_constraintStart_toStartOf="@+id/textView5"
         app:layout_constraintTop_toTopOf="@+id/textView5"
         app:layout_constraintVertical_bias="0.096" />
+
+    <Button
+        android:id="@+id/num10"
+        style="@style/Widget.AppCompat.Button"
+        android:layout_width="148dp"
+        android:layout_height="45dp"
+        android:autoText="true"
+        android:foregroundTint="#C11717"
+        android:onClick="piGame"
+        android:paddingLeft="0dp"
+        android:paddingTop="0dp"
+        android:paddingRight="20dp"
+        android:text="PI GAME"
+        android:textAlignment="textEnd"
+        android:textIsSelectable="false"
+        android:textSize="@dimen/signButton"
+        android:transitionName="3"
+        app:backgroundTint="@color/md_theme_dark_onSurfaceVariant"
+        tools:layout_editor_absoluteX="134dp"
+        tools:layout_editor_absoluteY="615dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
