Finished piGame feature
Made calculator ignores basic functions during the piGame, tell the user the amount of characters they got right, and show them exactly what they got right with bolded characters

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="numButton">48sp</dimen>
     <dimen name="signButton">28sp</dimen>
+    <dimen name="paddingSign">20dp</dimen>
 </resources>
