--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,7 +82,7 @@
         android:onClick="addOperator"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
-        android:paddingRight="20dp"
+        android:paddingRight="@dimen/paddingSign"
         android:text="/"
         android:textAlignment="textEnd"
         android:textSize="@dimen/signButton"
@@ -106,7 +106,7 @@
         android:onClick="displayResult"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
-        android:paddingRight="20dp"
+        android:paddingRight="@dimen/paddingSign"
         android:text="@string/Equals"
         android:textAlignment="center"
         android:textScaleX="2"
@@ -128,7 +128,7 @@
         android:onClick="addOperator"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
-        android:paddingRight="20dp"
+        android:paddingRight="@dimen/paddingSign"
         android:text="-"
         android:textAlignment="textEnd"
         android:textSize="@dimen/signButton"
@@ -152,7 +152,7 @@
         android:onClick="addOperator"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
-        android:paddingRight="20dp"
+        android:paddingRight="@dimen/paddingSign"
         android:text="*"
         android:textAlignment="textEnd"
         android:textSize="@dimen/signButton"
@@ -173,7 +173,7 @@
         android:onClick="addOperator"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
-        android:paddingRight="20dp"
+        android:paddingRight="@dimen/paddingSign"
         android:text="+"
         android:textAlignment="textEnd"
         android:textSize="@dimen/signButton"
@@ -196,7 +196,7 @@
         android:onClick="clearAll"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
-        android:paddingRight="20dp"
+        android:paddingRight="@dimen/paddingSign"
         android:text="@string/Clear"
         android:textAlignment="textEnd"
         android:textSize="@dimen/signButton"
@@ -218,7 +218,7 @@
         android:onClick="addNum"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
-        android:paddingRight="20dp"
+        android:paddingRight="@dimen/paddingSign"
         android:text="8"
         android:textAlignment="textEnd"
         android:textSize="@dimen/numButton"
@@ -241,7 +241,7 @@
         android:onClick="addNum"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
-        android:paddingRight="20dp"
+        android:paddingRight="@dimen/paddingSign"
         android:text="5"
         android:textAlignment="textEnd"
         android:textSize="@dimen/numButton"
@@ -264,7 +264,7 @@
         android:onClick="addNum"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
-        android:paddingRight="20dp"
+        android:paddingRight="@dimen/paddingSign"
         android:text="4"
         android:textAlignment="textEnd"
         android:textSize="@dimen/numButton"
@@ -287,7 +287,7 @@
         android:onClick="addNum"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
-        android:paddingRight="20dp"
+        android:paddingRight="@dimen/paddingSign"
         android:text="6"
         android:textAlignment="textEnd"
         android:textSize="@dimen/numButton"
@@ -310,7 +310,7 @@
         android:onClick="addNum"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
-        android:paddingRight="20dp"
+        android:paddingRight="@dimen/paddingSign"
         android:text="7"
         android:textAlignment="textEnd"
         android:textSize="@dimen/numButton"
@@ -333,7 +333,7 @@
         android:onClick="addNum"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
-        android:paddingRight="20dp"
+        android:paddingRight="@dimen/paddingSign"
         android:text="9"
         android:textAlignment="textEnd"
         android:textSize="@dimen/numButton"
@@ -356,7 +356,7 @@
         android:onClick="addNum"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
-        android:paddingRight="20dp"
+        android:paddingRight="@dimen/paddingSign"
         android:text="1"
         android:textAlignment="textEnd"
         android:textSize="@dimen/numButton"
@@ -379,7 +379,7 @@
         android:onClick="addNum"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
-        android:paddingRight="20dp"
+        android:paddingRight="@dimen/paddingSign"
         android:text="2"
         android:textAlignment="textEnd"
         android:textSize="@dimen/numButton"
@@ -401,7 +401,7 @@
         android:onClick="addNum"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
-        android:paddingRight="20dp"
+        android:paddingRight="@dimen/paddingSign"
         android:text="3"
         android:textAlignment="textEnd"
         android:textSize="@dimen/numButton"
@@ -424,14 +424,18 @@
         android:onClick="piGame"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
-        android:paddingRight="20dp"
+        android:paddingRight="@dimen/paddingSign"
         android:text="PI GAME"
         android:textAlignment="textEnd"
         android:textIsSelectable="false"
         android:textSize="@dimen/signButton"
         android:transitionName="3"
         app:backgroundTint="@color/md_theme_dark_onSurfaceVariant"
-        tools:layout_editor_absoluteX="134dp"
-        tools:layout_editor_absoluteY="615dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/textView2"
+        app:layout_constraintEnd_toEndOf="@+id/textView3"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="@+id/textView3"
+        app:layout_constraintTop_toTopOf="@+id/textView3"
+        app:layout_constraintVertical_bias="0.965" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
